Updated required version of ``django-model-utils``, and ``django-countries``.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,2 @@
 include RELEASE-VERSION
-include AUTHORS COPYING README INSTALL LICENCE
-graft thecut/contacts/static
-graft thecut/contacts/templates
+include README
